# latest-value-buffer

./: .gitignore  CMakeLists.txt  README.md
include/: lvb.h  lvb.hpp
src/: implementation.cpp
test/: benchmark.cpp  test1.cpp
